[package]
name = "musical_joycons"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joycon-rs = "0.6.3"
clap = { version = "4.5.39", features = ["derive"] }
midly = "0.5.3"
tokio = { version = "1.45.1", features = ["full"] }
